--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       You can find my work on <a href="https://github.com/alexmonq" target="_blank">GitHub</a> or contact me on <a href="https://www.linkedin.com/in/alexis-b-0896b9180/" target="_blank">LinkedIn</a>.
     </p>
     <p>
-      Outside of programming I am amateur <a href="https://www.strava.com/athletes/129268926" target="_blank">triathlete</a> and a <a href="https://www.youtube.com/watch?v=U_5rYZGScuk" target="_blank">West Coast Swing</a> dancer.
+      Outside of programming I'm an amateur <a href="https://www.strava.com/athletes/129268926" target="_blank">triathlete</a> and a <a href="https://www.youtube.com/watch?v=U_5rYZGScuk" target="_blank">West Coast Swing</a> dancer.
     </p>
   </body>
 </html>
